--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 			<h2>阅后即焚</h2>
 			<h3>请勿保留</h3>
 		</div>
+		<div class="pager"></div>
 		<input class="inputDate" id="inputDate" value="06/14/2008">
 		<script type="text/javascript" src="js/sea.js"></script>
-		<script type="text/javascript">seajs.use("model/text");</script>
+		<script type="text/javascript">seajs.use("model/index");</script>
 	</body>
 </head>
 </html>
