--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<body>
-		<div class="fortext" id="text">
-			<h1>测试使用</h1>
-			<h1>测试使用留着
-				<div class="keepme">TETEQU</div>
-			</h1>
-			<h1>测试使用丢了
-				<div class="dropme">SUSUSUS</div>
-			</h1>
-			<h1 id="ddd">测试使用</h1>
-			<h2>阅后即焚</h2>
-			<h3>请勿保留</h3>
-		</div>
-		<div class="pager"></div>
-		<input class="inputDate" id="inputDate" value="06/14/2008">
-		<script type="text/javascript" src="js/sea.js"></script>
-		<script type="text/javascript">seajs.use("model/index");</script>
-	</body>
+<body>
+	<div class="fortext" id="text">
+		<h1>测试使用</h1>
+		<h1>
+			测试使用留着
+			<div class="keepme">TETEQU</div>
+		</h1>
+		<h1>
+			测试使用丢了
+			<div class="dropme">SUSUSUS</div>
+		</h1>
+		<h1 id="ddd">测试使用</h1>
+		<h2>阅后即焚</h2>
+		<h3>请勿保留</h3>
+	</div>
+	<div class="pager"></div>
+	<input class="inputDate" id="inputDate" value="06/14/2008">
+	<div class="accounts-l chart" data-percent="75">
+		<span class="percent"></span>
+		<span>%</span>
+	</div>
+	<script type="text/javascript" src="js/sea.js"></script>
+	<script type="text/javascript">seajs.use("model/index");</script>
+</body>
 </head>
 </html>
