--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 		<h3>请勿保留</h3>
 	</div>
 	<div class="pager"></div>
-	<input class="inputDate" id="inputDate" value="06/14/2008">
+	<input class="inputDate" id="inputDate">
 	<div class="accounts-l chart" data-percent="75">
 		<span class="percent"></span>
 		<span>%</span>
 	</div>
+
 	<script type="text/javascript" src="js/sea.js"></script>
 	<script type="text/javascript">seajs.use("model/index");</script>
 </body>
