--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<span class="percent"></span>
 		<span>%</span>
 	</div>
-
+	<div class="table"></div>
 	<script type="text/javascript" src="js/sea.js"></script>
 	<script type="text/javascript">seajs.use("model/index");</script>
 </body>
