--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+</head>
 <body>
 	<div class="fortext" id="text">
 		<h1>测试使用</h1>
@@ -24,8 +25,12 @@
 		<span>%</span>
 	</div>
 	<div class="table"></div>
+
+
+	<div class="slider" style="margin-left:110px">
+	</div>
+
 	<script type="text/javascript" src="js/sea.js"></script>
 	<script type="text/javascript">seajs.use("model/index");</script>
 </body>
-</head>
 </html>
