--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 </head>
 <body>
 	<div class="fortext" id="text">
-		<h1>测试使用</h1>
-		<h1>
-			测试使用留着
-			<div class="keepme">TETEQU</div>
-		</h1>
+		<input class='inputDate' value='2014-11-21'/>
 		<h1>
 			测试使用丢了
 			<div class="dropme">SUSUSUS</div>
@@ -25,7 +21,8 @@
 		<span>%</span>
 	</div>
 	<div class="table"></div>
-
+	<div class="word">这是要被复制的内容</div>
+	<a href="#" class="copy">复制</a>
 
 	<div class="slider" style="margin-left:110px">
 	</div>
