--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<div class="slider" style="margin-left:110px">
 	</div>
 	<textarea name="" id="" cols="30" rows="10"></textarea>
+	<script type="text/javascript" src="js/_sea.js"></script>
 	<script type="text/javascript" src="js/sea.js"></script>
 	<script type="text/javascript">seajs.use("model/index");</script>
 </body>
