--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8"></head>
+	<meta name="viewport" content="width=device-width">
 <body>
+	<div class="banner">
+		<ul>
+			<li style="background-image: url('img/sunset.jpg');"></li>
+
+			<li style="background-image: url('img/wood.jpg');"></li>
+
+		</ul>
+	</div>
 	<div class="fortext" id="text">
 		<input class='inputDate' value='2014-11-21'/>
 		<h1>
@@ -36,17 +45,5 @@
 	<textarea name="" id="" cols="30" rows="10"></textarea>
 	<script type="text/javascript" src="js/sea.js"></script>
 	<script type="text/javascript">seajs.use("model/index");</script>
-	<style type="text/css">
-		body{
-	width:980px;
-  	margin: 50px auto;
-}
-form{
-	width:200px;
-}
-input{
-	width:100%;
-}
-	</style>
-</body>
+	<style type="text/css"></body>
 </html>
